Moved around static variables and reduced static blocks