@@ -4,7 +4,7 @@ import java.io.FileNotFoundException;
 
 public class Scrabble {
 
-    private static final Map<Integer, char[]> ScoreMap = Map.of(
+    private static final Map<Integer, char[]> Score_To_Letter_Map = Map.of(
             1, new char[]{'E', 'A', 'I', 'O', 'N', 'R', 'T', 'L', 'S', 'U'},
             2, new char[]{'D', 'G'},
             3, new char[]{'B', 'C', 'M', 'P'},
@@ -14,19 +14,7 @@ public class Scrabble {
             10, new char[]{'Q', 'Z'}
     );
 
-    private static final Map<Character, Integer> ScoreMap_Char_to_Score;
-
-    static {
-        Map<Character, Integer> tempScoreMap = new HashMap<>();
-        for (Map.Entry<Integer, char[]> entry: ScoreMap.entrySet()) {
-            for (Character e : entry.getValue()) {
-                tempScoreMap.put(e, entry.getKey());
-            }
-        }
-        ScoreMap_Char_to_Score = Collections.unmodifiableMap(tempScoreMap);
-    }
-
-    private static final Map<Integer, char[]> DistributionMap= Map.of(
+    private static final Map<Integer, char[]> Distribution_To_Letter_Map= Map.of(
             12, new char[]{'E'},
             9, new char[]{'A', 'I'},
             8, new char[]{'O'},
@@ -37,26 +25,33 @@ public class Scrabble {
             1, new char[]{'K', 'J', 'X', 'Q', 'Z'}
     );
 
-    private static final Map<Character, Integer> ScoreMap_Char_to_Dist;
+    private static final Map<Character, Integer> ScoreMap;
+    private static final Map<Character, Integer> DistributionMap;
+    private static final char[] AlphabetArray = new char[26];
+    public static char[] PlayerRack = new char[7];
+
 
     static {
+        Map<Character, Integer> tempScoreMap = new HashMap<>();
+        for (Map.Entry<Integer, char[]> entry: Score_To_Letter_Map.entrySet()) {
+            for (Character e : entry.getValue()) {
+                tempScoreMap.put(e, entry.getKey());
+            }
+        }
+        ScoreMap = Collections.unmodifiableMap(tempScoreMap);
+
         Map<Character, Integer> tempDistributionMap = new HashMap<>();
-        for (Map.Entry<Integer, char[]> entry: DistributionMap.entrySet()) {
+        for (Map.Entry<Integer, char[]> entry: Distribution_To_Letter_Map.entrySet()) {
             for (Character e : entry.getValue()) {
                 tempDistributionMap.put(e, entry.getKey());
             }
         }
-        ScoreMap_Char_to_Dist = Collections.unmodifiableMap(tempDistributionMap);
-    }
+        DistributionMap = Collections.unmodifiableMap(tempDistributionMap);
 
-    private static final char[] AlphabetArray = new char[26];
-    static {
         for (int i = 0; i < 26; i++) {
             AlphabetArray[i] = (char) ('A' + i);
         }
     }
-
-    public static char[] PlayerRack = new char[7];
 
     public static char[] createRandomRack(char[] alphabetArray, Integer rackLength) {
         Random random = new Random();
@@ -73,7 +68,7 @@ public class Scrabble {
 
     public char[] createDistributedBag() {
         ArrayList<Character> r = new ArrayList<Character>();
-        for (Map.Entry<Character, Integer> entry: ScoreMap_Char_to_Dist.entrySet()) {
+        for (Map.Entry<Character, Integer> entry: DistributionMap.entrySet()) {
             for (int i = 0; i < entry.getValue(); i++) {
                 r.add(entry.getKey());
             }
@@ -102,7 +97,7 @@ public class Scrabble {
         char[] inputCharArray = inputWord.toUpperCase().toCharArray();
         Integer score = 0;
         for (char c : inputCharArray ) {
-            score += ScoreMap_Char_to_Score.get(c);
+            score += ScoreMap.get(c);
         }
         return score;
     }
